
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1950] Adjusted permissions to allow proper listing of Elements; checks 'list' policy on Element now rather than view_[element]
- [#MODX-1975] Added warning messages for PHP 5.2.0 and 5.1.6 versions in setup asking that users upgrade to 5.3.0+; will still allow installs, however, if the user has those versions
- [#MODX-1967] Added warning to setup for people who are using PHP 5.3.0+ and dont have date.timezone set
- Added proper permission checks to Elements/Categories across processors/controllers
- Added UX for managing Element Category access for User Groups
- Add modAccessCategory to allow context-specific security policies on modCategory as well as any modElement via the related modCategory; includes policy inheritance to sub-categories
- Add modCategoryClosure table class to allow for easy recursive queries on modCategory
- Fixed bug caused by JS/CSS optimizations that would break left nav when too many resources were loaded
- Fixed bug where access contexts for admin user were being duplicated on upgrades
- Added extra options to attaching with modPhpMailer; fixed bug in phpmailer that caused E_DEPRECATED errors
- [#MODX-1912] Added manager logging to file/directory actions
- [#MODX-1912] Added file/directory specific permissions to allow more fine-grained security on using the file manager
- [#MODX-1972] Added OnTVInputRenderList, OnTVOutputRenderList, and OnTVOutputRenderPropertiesList System Events to allow you to return a path to specify where to look for custom TV files
- Allow separate caching directories for smarty when using different manager themes
- [#MODX-1951] Ensure smarty cache is cleared on site cache clearing and settings